# auto-signin

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: attendance.rs  get_class.rs  lib.rs  main.rs
