[package]
name = "qd"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
chrono = "0.4"

futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
 
anyhow = "1.0"
thirtyfour = "0.30"
hyper = { version = "0.14", features = ["server"] }
url = "2.5.4"
clap = { version = "4.5.38", features = ["derive"] }
